:hammer: Fix java 12 compile